@@ -836,6 +836,10 @@ class U6(Device):
         
         numSPIBytes = len(SPIBytes)
         
+        if numSPIBytes > 50:
+            raise LabJackException("The maximum number of bytes that can be sent/received in one packet is 50")
+        
+
         oddPacket = False
         if numSPIBytes%2 != 0:
             SPIBytes.append(0)
@@ -927,6 +931,9 @@ class U6(Device):
 
         result = self._writeRead(command, 10, [0xF8, 0x02, 0x14])
 
+        if result[6] != 0:
+            raise LowlevelErrorException(result[6], "The asynchConfig command returned an error:\n    %s" % lowlevelErrorToString(result[6]))
+
         returnDict = {}
 
         if (result[7] >> 7) & 1:
@@ -946,9 +953,18 @@ class U6(Device):
     def asynchTX(self, AsynchBytes):
         """
         Name: U6.asynchTX(AsynchBytes)
+
         Args: AsynchBytes, List of bytes to send
+
         Desc: Sends bytes to the U6 UART which will be sent asynchronously
               on the transmit line. Section 5.2.19 of the User's Guide.
+
+        returns a dictionary:
+        {
+            'NumAsynchBytesSent' : Number of Asynch Bytes Sent
+            'NumAsynchBytesInRXBuffer' : How many bytes are currently in the
+                                         RX buffer.
+        }
         """
         numBytes = len(AsynchBytes)
 
@@ -973,20 +989,46 @@ class U6(Device):
 
         result = self._writeRead(command, 10, [ 0xF8, 0x02, 0x15])
 
+        if result[6] != 0:
+            raise LowlevelErrorException(result[6], "The asynchTX command returned an error:\n    %s" % lowlevelErrorToString(result[6]))
+
         return {'NumAsynchBytesSent': result[7], 'NumAsynchBytesInRXBuffer': result[8]}
 
     def asynchRX(self, Flush = False):
         """
         Name: U6.asynchRX(Flush = False)
+
         Args: Flush, If True, empties the entire 256-byte RX buffer.
+
         Desc: Sends bytes to the U6 UART which will be sent asynchronously
               on the transmit line. Section 5.2.20 of the User's Guide.
+
+        returns a dictonary:
+        {
+            'AsynchBytes' : List of received bytes
+            'NumAsynchBytesInRXBuffer' : Number of AsynchBytes are in the RX
+                                         Buffer.
+        }
         """
-        command = [0, 0xF8, 0x01, 0x16, 0, 0, 0, int(Flush)]
+        # command = [0, 0xF8, 0x01, 0x16, 0, 0, 0, int(Flush)]
+        command = [ 0 ] * 8
+        
+        #command[0] = Checksum8
+        command[1] = 0xF8
+        command[2] = 0x01
+        command[3] = 0x16
+        #command[4] = Checksum16 (LSB)
+        #command[5] = Checksum16 (MSB)
+        #command[6] = 0x00
+        if Flush:
+            command[7] = 1
 
         result = self._writeRead(command, 40, [0xF8, 0x11, 0x16])
 
-        return {'NumAsynchBytesInRXBuffer': result[7], 'AsynchBytes': result[8:]}
+        if result[6] != 0:
+            raise LowlevelErrorException(result[6], "The asynchRX command returned an error:\n    %s" % lowlevelErrorToString(result[6]))
+
+        return {'AsynchBytes': result[8:], 'NumAsynchBytesInRXBuffer': result[7]}
 
     def i2c(self, Address, I2CBytes, EnableClockStretching = False, NoStopWhenRestarting = False, ResetAtStart = False, SpeedAdjust = 0, SDAPinNum = 0, SCLPinNum = 1, NumI2CBytesToReceive = 0, AddressByte = None):
         """
@@ -1011,6 +1053,10 @@ class U6(Device):
               communication. Section 5.2.21 of the User's Guide.
         """
         numBytes = len(I2CBytes)
+        if numBytes > 50:
+            raise LabJackException("The maximum number of bytes that can be sent in one packet is 50")
+        if NumI2CBytesToReceive > 52:
+            raise LabJackException("The maximum number of bytes that can be read in one packet is 52")
 
         oddPacket = False
         if numBytes % 2 != 0:
@@ -1053,6 +1099,9 @@ class U6(Device):
             oddResponse = True
 
         result = self._writeRead(command, (12 + NumI2CBytesToReceive), [0xF8, (3 + (NumI2CBytesToReceive/2)), 0x3B])
+
+        if result[6] != 0:
+            raise LowlevelErrorException(result[6], "The i2c command returned an error:\n    %s" % lowlevelErrorToString(result[6]))
 
         if NumI2CBytesToReceive != 0:
             if oddResponse:
@@ -1103,6 +1152,9 @@ class U6(Device):
         command[9] = SHTOptions
 
         result = self._writeRead(command, 16, [ 0xF8, 0x05, 0x39])
+
+        if result[6] != 0:
+            raise LowlevelErrorException(result[6], "The sht1x command returned an error:\n    %s" % lowlevelErrorToString(result[6]))
 
         val = (result[11]*256) + result[10]
         temp = -39.60 + 0.01*val
