@@ -310,3 +310,9 @@ Version History
       correct.
     - Added device access/claim error detection to Exodriver open.
     - Updated versioning for PEP compliancy using this format: 1.<YEAR><MONTH>
+    - Fixed an issue in SPI, Asynch, I2C, and SHT1x functions where error codes
+      aren't checked.
+    - Prevent I2C functions from attempting to write or read more data
+      the maximum number of bytes allowed in firmware.  Write:50, Read:52.
+    - Prevent SPI function from attempting to write or read more data
+      than the maximum number of bytes allowed in firmware.  50.
